[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/fonts/montreal/Montreal-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/LevelSelect.gd" type="Script" id=2]
[ext_resource path="res://ui/MainMenu.tres" type="DynamicFont" id=3]
[ext_resource path="res://ui/LevelButton_Hover.tres" type="StyleBox" id=4]
[ext_resource path="res://ui/LevelButton_Pressed.tres" type="StyleBox" id=5]
[ext_resource path="res://ui/LevelButton_Normal.tres" type="StyleBox" id=6]
[ext_resource path="res://ui/LevelSelect_Button_Font.tres" type="DynamicFont" id=7]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 1 )

[node name="CenterContainer" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 80
custom_constants/margin_top = 20
custom_constants/margin_left = 80
custom_constants/margin_bottom = 20
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 80.0
margin_top = 20.0
margin_right = 1286.0
margin_bottom = 748.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
margin_right = 1206.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 3 )
text = "Levels"
align = 1

[node name="AuthorLabel" type="Label" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 1206.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
text = "Author: lala"
align = 1

[node name="LevelsContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 76.0
margin_right = 1206.0
margin_bottom = 126.0
custom_constants/margin_top = 50

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/LevelsContainer"]
margin_top = 50.0
margin_right = 1206.0
margin_bottom = 50.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 130.0
margin_right = 1206.0
margin_bottom = 728.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="BackButton" type="Button" parent="VBoxContainer/MarginContainer"]
margin_top = 552.0
margin_right = 100.0
margin_bottom = 598.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 7 )
custom_constants/hseparation = 0
text = "Back"
